Text Editor: Un-indent undo doesn't work properly #44381

Closed
opened 2015-04-14 00:53:00 +02:00 by Andrej Ivanis · 7 comments

If you accidentally press Shift Tab there is no way to get back your script formatting with undo.
tab_bug.blend

Blender 2.74
To reproduce:
Open the file
Press shift tab
Try to undo, but formatting will be lost

Undo should be able to recover old formatting or un-indent function should be disabled if indent of any selected line is less then a tab size.

If you accidentally press Shift Tab there is no way to get back your script formatting with undo. [tab_bug.blend](https://archive.blender.org/developer/F161690/tab_bug.blend) Blender 2.74 To reproduce: Open the file Press shift tab Try to undo, but formatting will be lost Undo should be able to recover old formatting or un-indent function should be disabled if indent of any selected line is less then a tab size.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @aivanis

Added subscriber: @aivanis
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Campbell Barton changed title from Un-indent undo doesn't work properly to Text Editor: Un-indent undo doesn't work properly 2015-04-14 03:31:08 +02:00
Michele De Pascalis self-assigned this 2015-05-06 18:24:38 +02:00

I'm pretty sure I tackled it, submitting a patch right now.

I'm pretty sure I tackled it, submitting a patch right now.

This issue was referenced by c740027e30

This issue was referenced by c740027e309875e7008dfcfd1f2a611c788f0368

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c740027e30.

Closed by commit c740027e30.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44381
No description provided.