Fix T44381: Text Editor: Un-indent undo fails

D1284 by @mikidep